# chimera-ai

./: .gitignore  .python-version  AGENTS.md  CLAUDE.md  IDEAS.md  OTHER-TOOLS.md  README.md  README.rst  beads.md  conftest.py  gastown.md  happy.sh  main.py  pyproject.toml  tmux.md
.beads/: issues.jsonl  metadata.json
.claude/: settings.json  settings.local.json
agent-docs/: coding-standards.md  documentation.md  git-commits.md  layout.md  lycia-layout.md  unit-and-functional-testing.md  workspace-layout.md
docs/: conf.py  index.rst
research/: CLA.md  COMMANDS.md  CONCEPTS.md  IDEAS.md  LAYOUT.md  agent-instructions.md  beads-routing.md  beads.md  claude-code.md  dolt-docker.md  dolt.md  knowledge-context-memory-rag.md  memory.rst  openclaw.md  other-tools.md  references.md  typer-async-cli.md
src/chimera/: cli.py  service_config.py  services.py
src/chimera/templates/workspace/: .gitignore
tests/: conftest.py  test_main.py  test_service_config.py  test_services.py
