[project]
name = "chimera-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.15a6"
dependencies = [
    "typer",
]

[project.scripts]
chimera = "chimera.cli:app"

[dependency-groups]
dev = [
    "ty",
    "ruff",
    "pytest",
    "testfixtures",
    "sybil",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["chimera"]

[tool.ruff]
target-version = "py313"

[tool.pytest.ini_options]
addopts = "-v"
