[project]
name = "chimera-ai"
version = "0.1.0"
description = "Orchestrates AI agents working on goals across multiple projects"
readme = "README.rst"
requires-python = ">=3.15a6"
dependencies = [
    "typer",
]

[project.urls]
Homepage = "https://github.com/chimera-orchestration/chimera-ai"
Repository = "https://github.com/chimera-orchestration/chimera-ai"

[project.scripts]
chimera = "chimera.cli:app"

[dependency-groups]
dev = [
    "ty",
    "ruff",
    "pytest",
    "testfixtures",
    "sybil",
]
docs = [
    "sphinx",
    "furo",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["chimera"]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.format]
quote-style = "preserve"

[tool.pytest.ini_options]
addopts = "-v"
