[project]
name = "chimera-ai"
version = "0.1.0"
description = "Orchestrates AI agents working on goals across multiple projects"
readme = "README.rst"
requires-python = ">=3.14"
dependencies = [
    "typer",
    "pydantic",
    "giterator @ git+https://github.com/simplistix/giterator",
    "pydantic",
    "pyyaml",
]

[project.urls]
Homepage = "https://github.com/chimera-orchestration/chimera-ai"
Repository = "https://github.com/chimera-orchestration/chimera-ai"

[project.scripts]
chimera = "chimera.cli:app"
ch = "chimera.cli:app"

[dependency-groups]
dev = [
    "ty",
    "ruff",
    "pytest",
    "pytest-cov",
    "testfixtures @ git+https://github.com/simplistix/testfixtures",
    "sybil",
]
docs = [
    "sphinx",
    "furo",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/chimera"]

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.format]
quote-style = "preserve"

[tool.pytest.ini_options]
addopts = "-v"
